# SEKURO_TUGAS_1_Fauzan_PROGRAMMING

soal/soal_1_oop/: core_mcu.cpp  core_mcu.hpp
soal/soal_2_oop_bonus/: mcu.cpp  mcu.hpp  mcu_cam_controller.cpp  mcu_walker.cpp
soal/soal_cmake/: CMakeLists.txt
